bug fix: input on mobile

--- a/src/assets/style/core.scss
+++ b/src/assets/style/core.scss
@@ -46,7 +46,7 @@ body {
 }
 
 
-*{
+*:not(input){
   user-select: none;
 }
 
